Updated some features

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@amcharts/amcharts5": "^5.13.3",
+    "@emailjs/browser": "^4.4.1",
     "@solidjs/router": "^0.15.3",
+    "emailjs-com": "^3.2.0",
     "flowbite": "^3.1.2",
     "gsap": "^3.13.0",
     "lucide-solid": "^0.525.0",
