--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@amcharts/amcharts5": "^5.13.3",
     "@emailjs/browser": "^4.4.1",
     "@solidjs/router": "^0.15.3",
+    "ag-grid-community": "^34.1.1",
+    "ag-grid-solid": "^31.1.1",
     "emailjs-com": "^3.2.0",
     "flowbite": "^3.1.2",
     "gsap": "^3.13.0",
